--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,5 +1,15 @@
 [BotitNews]
 
 
-Newsfeed1=test with more testing
+Newsfeed1=(test with more testing
+  with more testing
 
+with more testing
+
+ with more testing)
+
+
+Newsfeed2=
+  with more testing
+
+with more testing
