--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,12 +1,12 @@
 [BotitNews]
 
 
-Newsfeed1=(test with more testing
+Newsfeed1=test with more testing
   with more testing
 
 with more testing
 
- with more testing)
+ with more testing
 
 
 Newsfeed2=
