--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,12 +1,7 @@
 [BotitNews]
 
 
-Newsfeed1=test with more testing
-  with more testing
-    with more testing
-     with more testing
+Newsfeed1=test with more testingwith more testingwith more testingwith more testing
 
 
-Newsfeed2=
-  with more testing
-    with more testing
+Newsfeed2=with more testingwith more testing
