--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -2,6 +2,5 @@
 
 
 Newsfeed1=test with more testingwith more testingwith more testingwith more testing
-
-
-Newsfeed2=with more testingwith more testing
+Newsfeed2=with more testingwith 'n more testing
+Newsfeed3=with more testingwith more testing4
