--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -4,3 +4,4 @@
 Newsfeed1=test with more testingwith more testingwith more testingwith more testing
 Newsfeed2=with more testingwith 'n more testing
 Newsfeed3=with more testingwith more testing4
+Newsfeed4=
