--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,8 +1,10 @@
 [BotitNews]
 
 
-Newsfeed1=test with more testingwith more testingwith more testingwith more testing
+Newsfeed1=Welcome to Bot-It 
+                    hello
+                         hi hi
 Newsfeed2=with more testingwith
-          more testing
-Newsfeed3=with more testingwith more testing4
+                    more testing
+Newsfeed3=some more news
 Newsfeed4=
