--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -1,6 +1,6 @@
 [BotIt Bots]
 pokemonmastersV=0.9.1
-pokemonmastersLink='https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20Pokemon%20masters%20V0.9.1.zip'
+pokemonmastersLink="https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20Pokemon%20masters%20V0.9.1.zip"
 
 DigimonReAV=0.5.5
 DigimonReALink='https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/DigimonRe%200.5.5.zip'
