--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -2,9 +2,11 @@
 
 
 Newsfeed1=Welcome to Bot-It 
-                    hello
-                         hi hi
-Newsfeed2=with more testingwith
-                    more testing
-Newsfeed3=some more news
-Newsfeed4=
+                    Feed1
+                         Test
+Newsfeed2=Welcome to Bot-It 
+                    Feed2
+                         Test
+Newsfeed3=Welcome to Bot-It 
+                    Feed3
+                         Test
