--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -14,3 +14,5 @@ RaidLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Raid%20v0
 CalibriaV=0.3.0
 CalibriaLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Calibria%20v0.3.0.zip
 
+[BotIt Build]
+BotitSver=0.1.1
