--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -16,3 +16,4 @@ CalibriaLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Calib
 
 [BotIt Build]
 BotitSver=0.1.1
+BotitLink=https
