--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -2,11 +2,12 @@
 
 
 Newsfeed1=Welcome to Bot-It 
-                    Feed1
-                         Test
-Newsfeed2=Welcome to Bot-It 
-                    Feed2
-                         Test
+                    Working ATM: Mirror / Emulator / Bots / Bots Update/ News Feed
+                    Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
+                    
+Newsfeed2=Bots Error Detected. 
+                    Removed ImageXY.ini From all Updates.
+                    Installer Self Build ImageXY.ini to img Folder now.
 Newsfeed3=Welcome to Bot-It 
                     Feed3
-                         Test
+                    
