--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -8,6 +8,6 @@ Newsfeed1=Welcome to Bot-It
 Newsfeed2=Bots Error Detected. 
                     Removed ImageXY.ini From all Updates.
                     Installer Self Build ImageXY.ini to img Folder now.
-Newsfeed3=Welcome to Bot-It 
+Newsfeed3=Welcome to \r\n Bot-It 
                     Feed3
                     
