--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -2,12 +2,12 @@
 
 
 Newsfeed1=Welcome to Bot-It 
-                    Working ATM: Mirror / Emulator / Bots / Bots Update/ News Feed
+                    Working: Mirror / Emulator / Bots / Bots Update/ News Feed
                     Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
                     
 Newsfeed2=Bots Error Detected. 
                     Removed ImageXY.ini From all Updates.
                     Installer Self Build ImageXY.ini to img Folder now.
-Newsfeed3=Welcome to \r\n Bot-It 
+Newsfeed3=Welcome to Bot-It 
                     Feed3
                     
