--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -8,6 +8,8 @@ Newsfeed1=Welcome to Bot-It
 Newsfeed2=Bots Error Detected. 
                     Removed ImageXY.ini From all Updates.
                     Installer Self Build ImageXY.ini to img Folder now.
-Newsfeed3=Welcome to Bot-It 
-                    Feed3
+Newsfeed3=Bot-It Calibria v0.3.1 Pushed
+                    Images are Safe
+		    Core update to AHK H
+		    Core update to scanner.
                     
