--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -5,11 +5,13 @@ Newsfeed1=Welcome to Bot-It
                     Working: Mirror / Emulator / Bots / Bots Update/ News Feed
                     Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
                     
-Newsfeed2=Bots Error Detected. 
-                    Removed ImageXY.ini From all Updates.
-                    Installer Self Build ImageXY.ini to img Folder now.
-Newsfeed3=Bot-It Calibria v0.3.1 Pushed
+Newsfeed2=Bot-It Calibria v0.3.1 Pushed
                     Images are Safe
 		    Core update to AHK H
 		    Core update to scanner. 
+Newsfeed3=Bot-It DigimonRe 0.5.6 Pushed
+                    Images are Safe
+		    Core update to AHK H
+		    Core update to scanner
+		    Added Save settings
                     
