--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,9 +1,15 @@
 [BotitNews]
 
 
-Newsfeed1=Welcome to Bot-It 
-                    Working: Mirror / Emulator / Bots / Bots Update/ News Feed
-                    Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
+Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	| Null
+*Images are Safe				|
+*Core update to AHK H				|
+*Core update to scanner				|
+*Added Save settings				|
+*Isolated Installer to own proc			|
+*Isolated BotitRND to it own proc		|
+*All Leaks are stable now.			|
+
                     
 Newsfeed2=Bot-It Calibria v0.3.1 Pushed
                     Images are Safe
@@ -15,3 +21,9 @@ Newsfeed3=Bot-It DigimonRe 0.5.6 Pushed
 		    Core update to scanner
 		    Added Save settings
                     
+
+
+
+Old=Welcome to Bot-It 
+                    Working: Mirror / Emulator / Bots / Bots Update/ News Feed
+                    Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
