--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,14 +1,14 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	| Null
-*Images are Safe				|
-*Core update to AHK H				|
-*Core update to scanner				|
-*Added Save settings				|
-*Isolated Installer to own proc			|
-*Isolated BotitRND to it own proc		|
-*All Leaks are stable now.			|
+Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	- Null
+	  *Images are Safe			-
+*Core update to AHK H				-
+*Core update to scanner				-
+*Added Save settings				-
+*Isolated Installer to own proc			-
+*Isolated BotitRND to it own proc		-
+*All Leaks are stable now.			-
 
                     
 Newsfeed2=Bot-It Calibria v0.3.1 Pushed
