--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -8,7 +8,7 @@ Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- Null
 	*Added Save settings		-*- Null
 	*Isolated Installer to own proc		-*- Null
 	*Isolated BotitRND to it own proc	-*- Null
-	___.*All Leaks are stable now.		-*- Null
+	_   *All Leaks are stable now.		-*- Null
 
                     
 Newsfeed2=Bot-It Calibria v0.3.1 Pushed
