BotIt Summoner Wars V0.4.1

--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,14 +1,14 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- Null
-	*Images are Safe		-*- Null
-	*Core update to AHK H		-*- Null
-	*Core update to scanner	-*- Null
-	*Added Save settings		-*- Null
-	*Isolated Installer to own proc	-*- Null
-	*Isolated BotitRND to it own proc	-*- Null
-	_    *All Leaks are stable now.	-*- Null
+Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- BotIt Summoner Wars V0.4.1
+	*Images are Safe		-*- *Images are Safe
+	*Core update to AHK H		-*- *Core update to AHK H
+	*Core update to scanner	-*- *Core update to scanner
+	*Added Save settings		-*- *Added Save settings
+	*Isolated Installer to own proc	-*- *All Leaks are stable now
+	*Isolated BotitRND to it own proc	-*- 
+	_    *All Leaks are stable now.	-*- 
 
                     
 Newsfeed2=Bot-It Calibria v0.3.1 Pushed
