--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -15,11 +15,12 @@ Newsfeed2=Bot-It Calibria v0.3.1 Pushed
                     Images are Safe
 		    Core update to AHK H
 		    Core update to scanner. 
-Newsfeed3=Bot-It DigimonRe 0.5.6 Pushed
+Newsfeed3=Bot-It DigimonRe 0.5.7 Pushed
                     Images are Safe
 		    Core update to AHK H
 		    Core update to scanner
 		    Added Save settings
+		    Fixed Save Option Issue
                     
 
 
