--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -14,6 +14,9 @@ RaidLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Raid%20v0
 CalibriaV=0.3.1
 CalibriaLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Calibria%20v0.3.1.zip
 
+UnisonV=0.01
+UnisonLink=
+
 [BotIt Build]
 BotitSver=0.1.0
-BotitLink=https
+BotitLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20Unison%20League%20V0.1.0.zip
