--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -19,4 +19,4 @@ UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%2
 
 [BotIt Build]
 BotitSver=0.1.0
-BotitLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20Unison%20League%20V0.1.0.zip
+BotitLink=https://github.com/DizzyduckAR/BotIt/raw/master/Update.zip
