--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -11,10 +11,9 @@ Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- BotIt Summoner Wars V0.4.1
 	_    *All Leaks are stable now.	-*- 
 
                     
-Newsfeed2=Bot-It Calibria v0.3.1 Pushed
-                    Images are Safe
-		    Core update to AHK H
-		    Core update to scanner. 
+Newsfeed2=Bot-It V0.1.1
+                    Self updater Added
+
 Newsfeed3=Bot-It DigimonRe 0.5.7 Pushed
                     Images are Safe
 		    Core update to AHK H
