--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -13,6 +13,7 @@ Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- BotIt Summoner Wars V0.4.1
                     
 Newsfeed2=Bot-It V0.1.1
                     Self updater Added
+		    Unison Tab added to mobile games
 
 Newsfeed3=Bot-It DigimonRe 0.5.7 Pushed
                     Images are Safe
