Seven Deadly Sins V0.1.0

--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -15,12 +15,12 @@ Newsfeed2=Bot-It V0.1.1
                     Self updater Added
 		    Unison Tab added to mobile games
 
-Newsfeed3=Bot-It DigimonRe 0.5.7 Pushed
-                    Images are Safe
-		    Core update to AHK H
-		    Core update to scanner
-		    Added Save settings
-		    Fixed Save Option Issue
+Newsfeed3=The Seven Deadly Sins V0.1.0
+                    New game Added to mobile
+		    Modes Event-Enhance-Evolve-Gold
+		    Auto sleep on no token and loop
+		    Random click area. full img scan
+		    Random sleeps with no mouse / screen use 
                     
 
 
