--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -17,6 +17,11 @@ CalibriaLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Calib
 UnisonV=0.1.0
 UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20Unison%20League%20V0.1.0.zip
 
+
+Deadly7V=0.1.0
+UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.0.zip
+
 [BotIt Build]
 BotitSver=0.1.1
 BotitLink=https://github.com/DizzyduckAR/BotIt/raw/master/Update.zip
+
