--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -19,7 +19,7 @@ UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%2
 
 
 Deadly7V=0.1.0
-UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.0.zip
+Deadly7Link=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.0.zip
 
 [BotIt Build]
 BotitSver=0.1.1
