--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,14 +1,13 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed	-*- BotIt Summoner Wars V0.4.1
-	*Images are Safe		-*- *Images are Safe
-	*Core update to AHK H		-*- *Core update to AHK H
-	*Core update to scanner	-*- *Core update to scanner
-	*Added Save settings		-*- *Added Save settings
-	*Isolated Installer to own proc	-*- *All Leaks are stable now
-	*Isolated BotitRND to it own proc	-*- 
-	_    *All Leaks are stable now.	-*- 
+Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed
+	Images are Safe
+	Core update to AHK H
+	Core update to scanner
+	Added Save settings
+	Isolated BotitRND to it own proc
+	_     All Leaks are stable now
 
                     
 Newsfeed2=Bot-It V0.1.1
@@ -24,7 +23,4 @@ Newsfeed3=The Seven Deadly Sins V0.1.0
                     
 
 
-
-Old=Welcome to Bot-It 
-                    Working: Mirror / Emulator / Bots / Bots Update/ News Feed
-                    Not Connected/Working: Botit Main App self Update / PC / Work / Hub / Remote Install
+Newsfeed4= Feed4
