--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,13 +1,12 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It Pokemon v0.9.3 Sefer Pushed
-	Images are Safe
-	Core update to AHK H
-	Core update to scanner
-	Added Save settings
-	Isolated BotitRND to it own proc
-	_     All Leaks are stable now
+Newsfeed1=Bot-It V0.1.3
+	Few Fixes.
+	Removed ini download and read inapp.
+	It will grab the ini on startup only now.
+	Icon Size on mobile to 50px.
+	Feed Split to 4.
 
                     
 Newsfeed2=Bot-It V0.1.1
@@ -23,4 +22,10 @@ Newsfeed3=The Seven Deadly Sins V0.1.0
                     
 
 
-Newsfeed4= Feed4
+Newsfeed4=Bot-It Pokemon v0.9.3 Sefer Pushed
+	Images are Safe
+	Core update to AHK H
+	Core update to scanner
+	Added Save settings
+	Isolated BotitRND to it own proc
+	All Leaks are stable now
