--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,12 +1,13 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It V0.1.3
+Newsfeed1=Bot-It V0.1.4
 	Few Fixes.
 	Removed ini download and read inapp.
 	It will grab the ini on startup only now.
 	Icon Size on mobile to 50px.
 	Feed Split to 4.
+	Offline Mode Added
 
                     
 Newsfeed2=Bot-It V0.1.1
