--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,18 +1,21 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It V0.1.4
+Newsfeed1=Bot-It V0.1.5
+	Fixed Errors is configparser
+	Added Try: to Emulator Menu Update
+	Added Intel Haxm Check and Installer
+	If Intel box Checked when box Created.
+	Boxes Safe / Bots Safe
+
+                    
+Newsfeed2=Bot-It V0.1.4
 	Few Fixes.
 	Removed ini download and read inapp.
 	It will grab the ini on startup only now.
 	Icon Size on mobile to 50px.
 	Feed Split to 4.
-	Offline Mode Added
-
-                    
-Newsfeed2=Bot-It V0.1.1
-                    Self updater Added
-		    Unison Tab added to mobile games
+	....Offline Mode Added
 
 Newsfeed3=The Seven Deadly Sins V0.1.0
                     New game Added to mobile
