--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -2,7 +2,7 @@
 
 
 Newsfeed1=Bot-It V0.1.5
-	Fixed Errors is configparser
+	Fixed Errors in configparser
 	Added Try: to Emulator Menu Update
 	Added Intel Haxm Check and Installer
 	If Intel box Checked when box Created.
