--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Old Botit/Update.zip
 Old Botit/Update/Bot-it.exe
 Old Botit/Update/BotitCore/HardwareAcceleratedManager/silent_install.bat
 Old Botit/Update/BotitCore/Update.ini
+Old Botit/Calibria v0.3.4.zip
