--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,21 +1,17 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It V0.1.5
-	Fixed Errors in configparser
-	Added Try: to Emulator Menu Update
-	Added Intel Haxm Check and Installer
-	If Intel box Checked when box Created.
-	Boxes Safe / Bots Safe
+Newsfeed1=Bot-It V0.1.7
+	New All in One Downloader / Updater
+	Removed Terminal
+	All Bots Been added with img folder button to allow user go check images.
 
                     
-Newsfeed2=Bot-It V0.1.4
-	Few Fixes.
-	Removed ini download and read inapp.
-	It will grab the ini on startup only now.
-	Icon Size on mobile to 50px.
-	Feed Split to 4.
-	....Offline Mode Added
+Newsfeed2=Calibria V0.4.0
+	Few Fixes added to Anti Detect
+	More randoms
+	Auto Bio Breaks
+
 
 Newsfeed3=The Seven Deadly Sins V0.1.0
                     New game Added to mobile
