BotIt The Seven Deadly Sins V0.1.2

--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -13,12 +13,11 @@ Newsfeed2=Calibria V0.4.0
 	Auto Bio Breaks
 
 
-Newsfeed3=The Seven Deadly Sins V0.1.0
-                    New game Added to mobile
-		    Modes Event-Enhance-Evolve-Gold
-		    Auto sleep on no token and loop
-		    Random click area. full img scan
-		    Random sleeps with no mouse / screen use 
+Newsfeed3=The Seven Deadly Sins V0.1.2
+                    Added Blustacks Support
+		    Added Bluestack Img ready
+		    New installer images for 5 and 6
+		     
                     
 
 
