--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -21,7 +21,17 @@ UnisonLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%2
 Deadly7V=0.1.2
 Deadly7Link=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
+
+HeroswarV=0.0.0
+HeroswarLink=
+
+WOTVV=0.0.0
+WOTVLink=
+
+SaintSeiyaV=0.0.0
+SaintSeiyaLink=
+
 [BotIt Build]
-BotitSver=0.1.5
+BotitSver=0.1.8
 BotitLink=https://github.com/DizzyduckAR/BotIt/raw/master/Update.zip
 
