--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -23,13 +23,13 @@ Deadly7Link=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%
 
 
 HeroswarV=0.0.0
-HeroswarLink=
+HeroswarLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
 WOTVV=0.0.0
-WOTVLink=
+WOTVLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
 SaintSeiyaV=0.0.0
-SaintSeiyaLink=
+SaintSeiyaLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
 [BotIt Build]
 BotitSver=0.1.5
