--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -23,13 +23,13 @@ Deadly7Link=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%
 
 
 HeroswarV=0.0.0
-HeroswarLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
+HeroswarLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Heroeswar%20v0.1.0.zip
 
 WOTVV=0.0.0
-WOTVLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
+WOTVLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
 SaintSeiyaV=0.0.0
-SaintSeiyaLink=#https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
+SaintSeiyaLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
 
 [BotIt Build]
 BotitSver=0.1.5
