--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -1,10 +1,12 @@
 [BotitNews]
 
 
-Newsfeed1=Bot-It V0.1.7
-	New All in One Downloader / Updater
-	Removed Terminal
-	All Bots Been added with img folder button to allow user go check images.
+Newsfeed1=Bot-It V0.1.8
+	New game with 2 on the way
+	fixed few issues with button unlock
+	base for Loging system
+	Info on discord
+
 
                     
 Newsfeed2=Calibria V0.4.0
@@ -21,10 +23,8 @@ Newsfeed3=The Seven Deadly Sins V0.1.2
                     
 
 
-Newsfeed4=Bot-It Pokemon v0.9.3 Sefer Pushed
-	Images are Safe
-	Core update to AHK H
-	Core update to scanner
-	Added Save settings
-	Isolated BotitRND to it own proc
-	All Leaks are stable now
+Newsfeed4=Heroes War CounterAttack 0.1.0
+	Dead simple Boss looper.
+	Stop on refill msg
+	Auto protect player with Bio Breaks
+	Game in TH non we can do about it.
