BotIt The Seven Deadly Sins V0.1.3

--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -15,10 +15,9 @@ Newsfeed2=Calibria V0.4.0
 	Auto Bio Breaks
 
 
-Newsfeed3=The Seven Deadly Sins V0.1.2
-                    Added Blustacks Support
-		    Added Bluestack Img ready
+Newsfeed3=The Seven Deadly Sins V0.1.3
 		    New installer images for 5 and 6
+		    Fixed Static for Botit20/21
 		     
                     
 
