--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -15,10 +15,10 @@ Newsfeed2=Calibria V0.4.0
 	Auto Bio Breaks
 
 
-Newsfeed3=The Seven Deadly Sins V0.1.5
-		    New Mode
-		    New Utils
-		    Images are safe
+Newsfeed3=The Seven Deadly Sins V0.1.6
+		    New Mode SSR Quest
+		    New Installer Tab
+		    
 		     
                     
 
