BotIt The Seven Deadly Sins V0.2.0

--- a/TXT/BotitNews.ini
+++ b/TXT/BotitNews.ini
@@ -15,9 +15,10 @@ Newsfeed2=Calibria V0.4.0
 	Auto Bio Breaks
 
 
-Newsfeed3=The Seven Deadly Sins V0.1.6
-		    New Mode SSR Quest
-		    New Installer Tab
+Newsfeed3=The Seven Deadly Sins V0.2.0
+		    Batter Victory detection for SSR Farm
+		    Batter lock on start and again buttons
+		    small fixes
 		    
 		     
                     
