--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ Old Botit/Update/Bot-it.exe
 Old Botit/Update/BotitCore/HardwareAcceleratedManager/silent_install.bat
 Old Botit/Update/BotitCore/Update.ini
 Old Botit/Calibria v0.3.4.zip
+Old Botit/BotIT Games/BotIt The Seven Deadly Sins V0.1.2.zip
+Old Botit/BotIt The Seven Deadly Sins V0.1.3.zip
+Old Botit/BotIt The Seven Deadly Sins V0.1.5.zip
+Old Botit/BotIt The Seven Deadly Sins V0.1.6.zip
+Old Botit/BotIt The Seven Deadly Sins V0.1.7.zip
+Old Botit/Calibria v0.4.0.zip
+Old Botit/Core.zip
+Old Botit/DigimonRe 0.5.8.zip
