--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Old Botit/BotIt The Seven Deadly Sins V0.1.7.zip
 Old Botit/Calibria v0.4.0.zip
 Old Botit/Core.zip
 Old Botit/DigimonRe 0.5.8.zip
+Old Botit/BotIt Pokemon masters V0.9.4.zip
