--- a/TXT/UpdateBots.ini
+++ b/TXT/UpdateBots.ini
@@ -26,10 +26,10 @@ HeroswarV=0.1.1
 HeroswarLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/Heroeswar%20v0.1.1.zip
 
 eggryptoV=0.1.0
-eggryptoLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
+eggryptoLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/eggrypto.zip
 
 BFHV=0.1.0
-BFHLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BotIt%20The%20Seven%20Deadly%20Sins%20V0.1.2.zip
+BFHLink=https://github.com/DizzyduckAR/BotIt/raw/master/BotIT%20Games/BRAVE%20FRONTIER%20HEROES.zip
 
 [BotIt Build]
 BotitSver=0.2.2
